# Mammo-SDE

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: compare_vae_variants.py  extract_embeddings.py  run_gmm_analysis.py  train_vae.py
src/mammo_sde/: __init__.py
src/mammo_sde/analysis/: embedding_stats.py  gmm_analysis.py  vae_analysis.py
src/mammo_sde/data/: embedding_dataset.py  embedding_loader.py
src/mammo_sde/encoders/: base_encoder.py  generic_vit_encoder.py  mammo_clip_encoder.py
src/mammo_sde/models/: __init__.py  base_vae.py  gmm.py  kmeans_pp.py  sigma_vae.py  vae.py  vamp_vae.py
src/mammo_sde/training/: fit_gmm.py  train_vae.py
src/mammo_sde/utils/: io.py  logger.py  seed.py  timer.py
src/mammo_sde/visualization/: plots_compare.py  plots_embeddings.py  plots_gmm.py  plots_vae.py
tests/: test_embedding_loading.py  test_gmm.py  test_vae.py
